# kde1-kdemultimedia

./: .cvsignore  CMakeLists.txt  ChangeLog  Makefile.am  Makefile.cvs  README  acconfig.h  configure.in.1  configure.in.2  configure.in.in  kdemultimedia.spec  libtool.m4.in
bsd-port/: Makefile
common/: config.h.in
debian/: changelog  control  copyright  kderules  man-pages  menu.in  postinst  rules  undocumented
doc/kmedia/: Makefile.am  index.sgml
doc/kmid/: Makefile.am  index-1.html  index-9.html  index.html  index.sgml  (+5 more)
kmedia/: .cvsignore  CHANGES  CMakeLists.txt  ChangeLog  KMedia.kdelnk  Makefile.am  Makefile.in  README.mediatool  TODO  de.po  kmedia.cpp  kmedia.h  kmedia.html  kmedia.lsm  kmediaui.cpp  kmediaui.h  kmediawin.cpp  kmediawin.h  kslider.cpp  kslider.h  mediaactions.cpp  messages.po.  prefs.cpp  prefs.h  uiactions.cpp  version.h
kmedia/pics/: CMakeLists.txt  Makefile.am  eject.xbm  ff.xbm  kmedia.xpm  media.xpm  nexttrk.xbm  playpause.xbm  poweroff.xbm  prevtrk.xbm  rew.xbm  stop.xbm
kmid/: .cvsignore  ChangeLog  Makefile.am  Makefile.in  PEOPLE  README  button1.xpm  button2.xpm  channel.cpp  channel.h  channelcfgdlg.cpp  channelview.cpp  channelview.h  collectdlg.cpp  history.txt  install.sh  instrname.cpp  instrname.i18n  kaskdlg.cpp  kaskdlg.h  kdisptext.cpp  kdisptext.h  klcdnumber.cpp  klcdnumber.h  kmid-0.2.lsm  kmid-0.4-1.spec  kmid-0.4.1-1.spec  kmid-0.4.1.lsm  kmid-0.4.lsm  kmid-0.5-1.spec  kmid-0.5.1-1.spec  kmid-0.5.1.lsm  kmid-0.5.lsm  kmid-0.6-1.spec  kmid-0.6.lsm  kmid.html  kmid.kdelnk  kmid.lsm  kmid.spec  kmid.xpm  (+18 more)
kmid/doc/en/: Makefile.am  index.html  index.sgml  index1.html  index2.html  index3.html  index4.html  index5.html
kmid/doc/es/: Makefile.am  index-8.html  index-9.html  index.html  index.sgml  index1.html  index2.html  index3.html  index4.html  index5.html
kmid/examples/: EnglishmanInNewYork.kar  LaFlaca.kar  Makefile.am  MoneyForNothing.kar  Progreso.kar  ReturnToSender.kar  TakingCareOfBusiness.kar  UnBesoYUnaFlor.kar  UnVeleroLlamadoLibertad.kar
kmid/maps/: Makefile.am  yamaha790.map
kmid/player/: Makefile.in  makefile  makefile.manual  midiout.cc.old  midiout.midi00.cc  midiout.sequencer.cc  midiout.sequencer2.cc
kmid/toolbarxpm/: Makefile.am  kmid_fforward.xpm  kmid_frewind.xpm  kmid_next.xpm  kmid_pause.xpm  kmid_play.xpm  kmid_prev.xpm  kmid_stop.xpm
kmidi/: .cvsignore  CMakeLists.txt  ChangeLog  INSTALL  KMidi.kdelnk  Makefile.am  Makefile.in  Makefile.tim  README  b_out.c  bwlednum.cpp  bwlednum.h  common.c  config.h  configdlg.cpp  configdlg.h  constants.h  controls.h  ctl.c  dumb_c.c  fffload.c  hpux_a.c  instrum.c  instrum.h  kmidi.cpp  kmidi.h  kmidi.xpm  large-kmidi.xpm  linux_a.c  log.cpp  log.h  mix.c  motif_p.c  ncurs_c.c  output.c  playlist.cpp  playlist.h  playmidi.c  playmidi.h  raw_a.c  (+12 more)
kmidi/config/: Makefile.am  chaos12-voices  chaos8-voices
kmidi/docs/: Makefile.am  kmidi-2.html  kmidi-3.html  kmidi.html  kmidi.sgml
kmidi/docs/de/: Makefile.am  kmidi-1.html  kmidi-2.html  kmidi-3.html  kmidi-4.html  kmidi-5.html  kmidi.de-1.html  kmidi.de-2.html  kmidi.de-3.html  kmidi.de-4.html  kmidi.de-5.html  kmidi.de.html  kmidi.html
kmidi/midis/: Peter_Gabriel__In_your_Eyes.mid  Robin_Gibb__Juliet.mid  Synth.mid  Toto:_Afrika.mid
kmidi/tim/: Makefile  pipe.c  tim.ps  tim0.2i+tr+sfp1.diff  tkmidity.tcl
kmix/: .cvsignore  CMakeLists.txt
kscd/: .cvsignore  CDDBSetup.cpp  CDDBSetup.dlg  CDDBSetup.h  CDDBSetupData.cpp  CDDBSetupData.h  CDDialog.cpp  CDDialog.h  CDDialogData.cpp  ChangeLog  INSTALL  Makefile.am  Makefile.in  README  TODO  bwlednum.cpp  bwlednum.h  cddaslave.c  cddb.cpp  cddb.h  cdinfo.c  cdrom.c  config.h.std  configdlg.cpp  configdlg.h  docking.cpp  docking.h  drv_sony.c  drv_toshiba.c  inexact.cpp  inexact.h  kscd-0.3.lsm  kscd-script  kscd.cpp  kscd.h  kscd.kdelnk  kscd.xpm  kscd2.xpm  ledlamp.h  mgconfdlg.cpp  (+23 more)
kscd/bitmaps/: cdsmall.xpm  db.xbm
kscd/bwlednum/: Makefile  bwlednum.cpp  bwlednum.h  example.cpp
kscd/docs/: Makefile.am  Makefile.in  kscd-1.html  kscd-2.html  kscd-3.html  kscd-4.html  kscd-8.html  kscd.html  kscd.sgml
kscd/kscdmagic/: .cvsignore  Makefile.am  Makefile.in  alphabet.h  bitmap.cpp  bitmap.h  core.cpp  main.cpp  sound.cpp  symbol.h  syna.h  xlib.c  xlib.h  xlibwrap.cpp
po/: Makefile.am  kmedia.pot  kmid.pot  kmidi.pot  kmix.pot  kscd.pot
po/br/: kmedia.po  kmid.po  kmidi.po  kmix.po  kscd.po
po/ca/: Makefile.am  kmid.po  kmidi.po  kmix.po  kscd.po
po/cs/: .cvsignore  Makefile.am  kmedia.po  kmid.po  kmidi.po  kmix.po  kscd.po
po/da/: kmedia.po  kmid.po  kmidi.po  kmix.po  kscd.po
po/de/: Makefile.am  kmedia.po  kmid.po  kmidi.po  kmix.po  kscd.po
po/el/: kmix.po  kscd.po
po/eo/: Makefile.am  kmedia.po  kmid.po  kmix.po  kscd.po
po/es/: Makefile.am  kmedia.po  kmid.po  kmix.po  kscd.po
po/fi/: Makefile.am  kmedia.po  kmid.po  kmix.po  kscd.po
po/fr/: Makefile.am  kmedia.po  kmid.po  kmidi.po  kmix.po  kscd.po
po/hr/: Makefile.am  kmedia.po  kmid.po  kmix.po  kscd.po
po/hu/: Makefile.am  kmid.po  kmidi.po  kmix.po  kscd.po
po/is/: Makefile.am  kmedia.po  kmid.po  kmidi.po  kmix.po  kscd.po
po/it/: Makefile.am  kmedia.po  kmix.po
po/ja/: kmedia.po  kmid.po  kmix.po  kscd.po
po/ko/: Makefile.am  kmedia.po  kmid.po  kmix.po  kscd.po
po/nl/: Makefile.am  kmedia.po  kscd.po
po/no/: Makefile.am  kmedia.po  kmid.po  kmidi.po  kmix.po  kscd.po
po/pl/: Makefile.am  kmedia.po  kmid.po  kmix.po  kscd.po
po/pt/: Makefile.am  kmedia.po  kmid.po  kmix.po  kscd.po
po/pt_BR/: Makefile.am  kmedia.po  kmid.po  kmidi.po  kmix.po  kscd.po
po/ro/: Makefile.am  kmedia.po  kmedia.pot  kmix.po
po/sk/: Makefile.am  kmedia.po  kmid.po  kmidi.po  kmix.po  kscd.po
po/sv/: Makefile.am  kmedia.po  kmid.po  kmix.po  kscd.po
po/tr/: Makefile.am  kmedia.po  kmid.po  kmix.po  kscd.po
po/zh_CN.GB2312/: Makefile.am  kmedia.po  kmid.po  kmix.po  kscd.po
po/zh_GB2312/: Makefile.am  kmedia.po  kmix.po
po/zh_TW.Big5/: Makefile.am  kmedia.po  kmid.po  kmix.po  kscd.po
po/zh_TW_Big5/: Makefile.am  kmedia.po  kmix.po
(+14 files in other folders)
